infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-account-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: the-account.vortex.studio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: the-account-service
                port:
                  number: 80
